--- a/src/app/about/about.module.css
+++ b/src/app/about/about.module.css
@@ -1,5 +1,59 @@
-.imgContainer{
-    width: 100%;
+.container{
+    display:flex;
+    gap: 100px;
+}
+
+.textContainer{
+    flex:1;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.subtitle{
+    color:var(--btn);
+}
+
+.title{
+    font-size: 54px;
+}
+.desc{
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.imageContainer{
     position: relative;
-    height:500px;
+    flex: 1;
+}
+
+.boxes{
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.box{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
+}
+
+.box h1{
+    color:var(--btn);
+}
+.img{
+    object-fit: contain;
+}
+
+@media(max-width:768px){
+    .container{
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .boxes{
+        flex-direction: column;
+        gap: 50px;
+    }
 }
