--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -23,7 +23,7 @@
         right: 0;
         height: calc(100vh - 100px);
         width: 50%;
-        background-color: rebeccapurple;
+        background-color: var(--bg);
         display: flex;
         justify-content: center;
         align-items: center;
@@ -36,6 +36,7 @@
         display:block;
         /* font-size: 30px; */
         font-weight: bold;
+        background-color: transparent;
     }
     .links{
         display:none;
